[package]
name = "bililive_bark"
version = "0.1.0"
edition = "2024"

[dependencies]
bark_rs = { version = "0.1.2", default-features = false, features = [
    "async",
    "rustls",
] }
bollard = "0.19.2"
clap = { version = "4.5.45", features = ["derive", "env"] }
eros = "0.1.0"
futures-util = "0.3.31"
logfmt_parse = { git = "https://github.com/ch1y1z1/logfmt_parse.git", version = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde-value = "0.7.0"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
lto = true
strip = "symbols"
